--- a/package.xml
+++ b/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="eduncan@todo.todo">eduncan</maintainer>
+  <maintainer email="jackfan108@todo.todo">jackfan108</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
